# snakemake-executor-plugin-dirac

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release-please.yml
docs/: intro.md
tests/: tests.py
